force-app/main/default/objects/ssot__LearningFoundationItem__dlm/fields/ssot__LearningAchievementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningAchievementId__c</fullName>
    <label>Learning Achievement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningAchievementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>