force-app/main/default/objects/ssot__LearningFoundationItem__dlm/fields/ssot__rel_1719819887944_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819887944_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningFoundationItem_LearningAchie_rel</label>
    <referenceTo>ssot__LearningAchievement__dlm</referenceTo>
    <relationshipLabel>LearningFoundationItem_LearningAchie_rel</relationshipLabel>
    <relationshipName>rel_1719819887944_end</relationshipName>
    <type>Lookup</type>
</CustomField>